<resources>
    <string name="app_name">LetMeCook</string>
    <string name="title_home">Home</string>
    <string name="title_recipes">Chef\'s Corner</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_shopping">Shopping</string>
    <string name="title_user">User</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="signup">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="Scan">Scan items into the inventory</string>
    <string name="email">Email</string>
    <string name="passwordRestriction">Password must be at least 8 characters and contain a number, a lowercase letter and an uppercase letter</string>
    <string name="take_photo">Take Photo</string>
    <string name="scan_Barcode">Scan Barcode</string>
    <string name="barcode_placeholder">Scan food product barcode for nutritional information.</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="search">Search</string>
    <string name="household_search">Add to your household!</string>
    <string name="invite">Invite</string>
    <string name="household">Household</string>
    <string name="household_button">Navigate to Household Manager</string>
    <string name="manage_your_household">Manage Your Household</string>
    <string name="manage">Manage</string>
    <string name="view_invites">View invites</string>
    <string name="members">Members</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="title_inventory">Inventory</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="reset">Reset</string>
    <string name="favourite">Favourite</string>
    <string name="view_favourite_recipes">View Favourite Recipes</string>
    <string name="review">Review</string>
    <string name="reviews">Reviews</string>
    <string name="leave_a_review">Leave a Review!</string>
    <string name="what_can_i_cook">What can I cook?</string>
    <string name="ingredient">Ingredient</string>
    <string name="remove_item">Remove Item</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string-array name="cuisine_dropdown">
        <item>select cuisine type</item>
        <item>european</item>
        <item>Mediterranean</item>
        <item>Greek</item>
        <item>Italian</item>
        <item>Indian</item>
        <item>African</item>
        <item>Asian</item>
        <item>Australian</item>
        <item>Caribbean</item>
        <item>Middle eastern</item>
        <item>Brazilian</item>
        <item>French</item>
        <item>Eastern european</item>
        <item>Mexican</item>
        <item>Japanese</item>
        <item>Thai</item>
        <item>Chinese</item>
        <item>Korean</item>
    </string-array>

</resources>