<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/> <!-- home page -->

    <item
        android:id="@+id/navigation_recipes"
        android:icon="@drawable/ic_recipes_black_24dp"
        android:title="@string/title_recipes"/> <!-- recipes -->

    <item
        android:id="@+id/navigation_inventory"
        android:icon="@drawable/ic_inventory_black_24dp"
        android:title="@string/title_inventory"/> <!-- inventory -->

    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping_black_24dp"
        android:title="@string/title_shopping"/> <!-- shopping -->

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_user"/> <!-- user -->

</menu>