<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.user.UserFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/searchCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="?attr/colorPrimary">

            <TextView
                android:id="@+id/textSearchMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/household_search"
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary" />

            <!--
            <EditText
                android:id="@+id/householdInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/household"
                android:inputType="textNoSuggestions"
                android:padding="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSearchMember" />

             -->
            <EditText
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/custom_edittext"
                android:drawablePadding="8dp"
                android:hint="@string/search"
                android:inputType="textNoSuggestions"
                android:padding="8dp"
                android:textColor="?attr/colorOnPrimary"
                android:textColorHighlight="@color/cardview_dark_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textSearchMember" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="?attr/colorOnSecondary"
                android:backgroundTint="?attr/colorSecondaryVariant"
                android:text="@string/invite"
                app:cornerRadius = "20dp"
                app:layout_constraintTop_toBottomOf="@id/searchBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/searchCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" >

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>