<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.home.HomeFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/searchCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="?attr/colorPrimary" >
        <EditText
            android:id="@+id/nameBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="16dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:hint="Recipe Name"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHighlight="@color/cardview_dark_background"
            app:layout_constraintBottom_toTopOf="@id/authorBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/authorBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:padding="16dp"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:inputType="text"
            android:hint="Author name"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHighlight="@color/cardview_dark_background"
            app:layout_constraintTop_toBottomOf="@id/nameBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/showMenuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Menu"
            app:layout_constraintTop_toBottomOf="@id/authorBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/ingredientsLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/showMenuButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:padding="16dp">


        </LinearLayout>

        <LinearLayout
            android:id="@+id/filterButtonLayout"
            style="?android:attr/buttonBarStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ingredientsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:padding="16dp">
            <Button
                android:id="@+id/resetButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textColor="?attr/colorOnSecondary"
                android:backgroundTint="?attr/colorSecondaryVariant"
                app:layout_constraintStart_toStartOf="parent"
                />

            <Button
                android:id="@+id/searchButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:text="@string/search"
                android:textColor="?attr/colorOnSecondary"
                android:backgroundTint="?attr/colorSecondaryVariant"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/recipesCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintTop_toBottomOf="@id/searchCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pageButtonLayout"
        android:backgroundTint="?attr/colorPrimary">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:scrollbars="vertical" />

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/pageButtonLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/prevButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondaryVariant"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/nextButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="?attr/colorOnSecondary"
            android:backgroundTint="?attr/colorSecondaryVariant"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>